# bumper-advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: cve.py  db.py  pg.py  schema_pg.sql  search_pg.py  server.py
scripts/: crontab  load_iac.py  normalize_enforced.py  sync_catalog.sh  sync_cve_pg.py  sync_iac.py  sync_loop.sh
